// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip props basic tooltip 1`] = `
<div>
  <span
    id="basic-example"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    Hello World!
    <div
      class="react-tooltip-arrow"
      style="left: 5px; bottom: -4px;"
    />
  </div>
</div>
`;

exports[`tooltip props clickable tooltip 1`] = `
<div>
  <span
    id="example-clickable"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top undefined"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    <button>
      button
    </button>
    <div
      class="react-tooltip-arrow"
      style="left: 5px; bottom: -4px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip with custom position 1`] = `
<div>
  <span
    id="example-place"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    Hello World!
    <div
      class="react-tooltip-arrow"
      style="left: 5px; bottom: -4px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip with delay hide 1`] = `
<div>
  <span
    id="example-delay-hide"
  >
    Lorem Ipsum
  </span>
</div>
`;

exports[`tooltip props tooltip with delay show 1`] = `
<div>
  <span
    id="example-delay-show"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    Hello World!
    <div
      class="react-tooltip-arrow"
      style="left: 5px; bottom: -4px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip with float 1`] = `
<div>
  <span
    id="example-float"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    Hello World!
    <div
      class="react-tooltip-arrow"
      style="left: 5px; bottom: -4px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip with html 1`] = `
<div>
  <span
    id="example-html"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-top"
    role="tooltip"
    style="left: 5px; top: -10px;"
  >
    <span>
      <div>
        Hello World!
        <div />
      </div>
    </span>
    <div
      class="react-tooltip-arrow"
      style="left: 5px; bottom: -4px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip with place 1`] = `
<div>
  <span
    id="example-place"
  >
    Lorem Ipsum
  </span>
  <div
    class="react-tooltip react-tooltip__place-right"
    role="tooltip"
    style="left: 10px; top: 5px;"
  >
    Hello World!
    <div
      class="react-tooltip-arrow"
      style="left: -4px; top: 5px;"
    />
  </div>
</div>
`;

exports[`tooltip props tooltip without element reference 1`] = `
<div>
  <span>
    Lorem Ipsum
  </span>
</div>
`;
